EKS-BOOT/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eksboot
spec:
  selector:
    matchLabels:
      app: eksboot
  template:
    metadata:
      labels:
        app: eksboot
    spec:
      containers:
        - name: eksboot
          image: 693608546603.dkr.ecr.ap-northeast-2.amazonaws.com/docker_k8s_app_repository
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: tcp
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: eksboot
spec:
  selector:
    app: eksboot
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
